its been a hard day's night and ive been working like a dog, i should be sleeping like a log

--- a/app/assets/stylesheets/partials/_variables.scss
+++ b/app/assets/stylesheets/partials/_variables.scss
@@ -1,4 +1,5 @@
-// Colors
+/* COLORS
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
 $bg: #ffffff;
 $primary-text: #4d5176;
 $secondary-text: #dbdce4;
