--- a/app/views/partials/_header.html.erb
+++ b/app/views/partials/_header.html.erb
@@ -3,7 +3,17 @@
     <div class="container">
       <div class="grid">
         <div class="col-xs-12 col-md-6">
-          <span>Crypto Dashboard</span>
+          <figure class="media">
+            <div class="logo">
+              <%= image_tag("/assets/logo.png") %>
+            </div>
+            <figcaption class="logo-content">
+              <span>Crypto Dashboard</span>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-xs-12 col-md-6">
+          <p>Please press the <strong>space key</strong> to filter through currencies or <strong>click</strong> on desired currency to view more details.</p>
         </div>
       </div>
     </div>
