--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -1,9 +1,12 @@
-// Imports
+/* IMPORT PARTIALS
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
 @import 'partials/mixins';
 @import 'partials/variables';
 @import 'partials/typography';
 @import 'partials/grid';
 
+/* GLOBALS
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
 * {
   box-sizing: border-box;
   &::before, &::after {
@@ -15,36 +18,6 @@ body {
   margin: 0;
   background: $bg;
   color: $primary-text;
-}
-
-figcaption, figure, footer, header, main, nav {
-  display: block;
-}
-
-a {
-  color: $primary-text;
-  text-decoration: none;
-  cursor: pointer;
-  background-color: transparent;
-  -webkit-text-decoration-skip: objects;
-  -webkit-transition: all .3s;
-  -moz-transition: all .3s;
-  -ms-transition: all .3s;
-  -o-transition: all .3s;
-  transition: all .3s;
-  &:active, &:hover {
-    outline-width: 0;
-  }
-}
-
-ul {
-  margin: 0;
-  padding: 0;
-  list-style: none outside none;
-
-  li {
-    margin: 0 1.75rem 0 0;
-  }
 }
 
 .container {
@@ -59,13 +32,36 @@ ul {
 }
 
 nav {
+  -webkit-animation: fadein 2s;
+  -moz-animation: fadein 2s;
+  -ms-animation: fadein 2s;
+  -o-animation: fadein 2s;
+  animation: fadein 2s;
   padding: 1rem 0;
   width: 100%;
-  span {
-    letter-spacing: .5rem;
-    text-transform: uppercase;
-    font-weight: 900;
-    color: $primary-text;
+  .media {
+    display: flex;
+    line-height: 1;
+    align-items: center;
+    .logo {
+      img {
+        width: 36px;
+        height: 36px;
+      }
+    }
+    .logo-content {
+      position: relative;
+      span {
+        letter-spacing: .5rem;
+        text-transform: uppercase;
+        font-weight: 900;
+        color: $primary-text;
+        padding-left: 1.25rem;
+      }
+    }
+  }
+  p {
+    margin-top: .75rem;
   }
 }
 
@@ -73,7 +69,7 @@ nav {
   position: relative;
   margin-top: 2.5rem;
   width: 100%;
-  border-radius: 1rem;
+  border-radius: 2rem;
   -webkit-transition: all .3s;
   -moz-transition: all .3s;
   -ms-transition: all .3s;
@@ -81,15 +77,15 @@ nav {
   transition: all .3s;
   .icon {
     position: absolute;
-    max-width: 60px;
+    max-width: 50px;
     top: -1.5rem;
-    right: -15px;
+    right: 0;
     left: 0;
     margin: 0 auto;
-    width: 100%;
     img {
       max-width: 50px;
       border-radius: 50%;
+      margin: 0 auto;
     }
   }
   .card-header {
@@ -118,9 +114,8 @@ nav {
     background-color: #fff;
   }
   .card-content {
-    padding: 3.5rem 1.5rem 1.5rem 1.5rem;
     background-color: $secondary;
-    border-radius: 0 0 1rem 1rem;
+    border-radius: 0 0 2rem 2rem;
     .details {
       width: 100%;
       margin: 0 auto;
@@ -136,40 +131,10 @@ nav {
           color: #fff;
         }
       }
-      .progress-block {
-        width: 100%;
-        padding: 1rem;
-        border-radius: 1rem;
-        background-color: $primary;
-        margin: 1rem 0;
-        .label {
-          color: #fff;
-          font-weight: bold;
-        }
-        .data {
-          width: 100%;
-          height: 30px;
-          .data-from {
-            float: left;
-          }
-          .data-to {
-            float: right;
-          }
-        }
-        .progress-bar {
-          height: 10px;
-          background-color: $alt;
-          border-radius: 1rem;
-          .progress {
-            height: 10px;
-            border-radius: 1rem;
-            background-color: $action;
-          }
-        }
-      }
     }
   }
-  &.selected {
+  &.active {
+    pointer-events: none;
     box-shadow: rgba(46, 41, 51, 0.08) 0 2px 14px, rgba(71, 63, 79, 0.08) 0 12px 14px;
     .card-header {
       padding: 1.75rem 1.5rem 0 1.5rem;
@@ -177,10 +142,17 @@ nav {
         font-size: 1.75rem;
       }
     }
+    .card-content {
+      padding: 3.5rem 1.5rem 1.5rem 1.5rem;
+      animation-duration: 1.5s;
+      animation-name: height;
+    }
   }
-  &.muted {
+  &.inactive {
     border: 2px solid $accent;
     cursor: pointer;
+    transform: translate3d(0, 0, 0);
+    transition: transform .15s ease;
     .card-header {
       .price {
         font-size: 2rem;
@@ -193,9 +165,14 @@ nav {
     .card-content {
       display: none;
     }
+    &:hover {
+      transform: translate3d(0, -4px, 0);
+    }
   }
 }
 
+/* SCREEN SIZE SUPPORT
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
 @media (min-width: 62rem) {
   body {
     font-size: 1.25rem;
@@ -219,4 +196,45 @@ nav {
     font-size: 1.5rem;
   }
 
+}
+
+/* KEYFRAME ANIMATIONS
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+@keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+@keyframes height {
+  from {
+    height: 0;
+    padding: 0;
+  }
+  to {
+    height: 250px;
+  }
 }
