--- a/app/assets/stylesheets/partials/_typography.scss
+++ b/app/assets/stylesheets/partials/_typography.scss
@@ -1,7 +1,5 @@
-// Fonts
 @import url('https://fonts.googleapis.com/css?family=Lato|Montserrat:400,800&display=swap');
 
-// Main Body
 body {
   font-family: 'Lato', sans-serif;
   font-size: 1rem;
@@ -18,7 +16,6 @@ body {
 }
 
 
-// Headers
 h1, h2, h3, h4 {
   font-family: 'Montserrat', sans-serif;
   font-weight: 700;
@@ -50,4 +47,8 @@ h4 {
   padding: 0;
   font-size: 1.25rem;
   line-height: 1.1;
+}
+
+p {
+  margin-top: 0;
 }
